<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="2dp"
        android:background="@color/transparent"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/control_panel_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tabBackground="@drawable/tab_selector"
        app:tabGravity="center"
        app:tabIndicatorHeight="0dp" />

    <TextView
        android:id="@+id/tvProgressMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/connecting"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/joinInfo" />

    <TextView
        android:id="@+id/tvAppVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_version"
        android:textColor="@color/app_version_text"
        android:layout_marginBottom="@dimen/dimen_16"
        android:textSize="@dimen/dimen_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imgUploadLogs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="@dimen/dimen_16"
        android:baselineAlignBottom="true"
        android:scaleType="center"
        android:contentDescription="@string/upload_logs"
        android:src="@drawable/ic_cloud_upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <include
        android:id="@id/selfView"
        layout="@layout/self_view"
        android:layout_width="180dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="@string/self_view_ratio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/joinInfo"
        layout="@layout/join_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/control_panel_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/meeting_controls_panel_bg"
        android:minHeight="80dp"
        android:paddingBottom="@dimen/dimen_10"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/imgRoster"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:padding="@dimen/_4dp"
            android:background="@drawable/bg_circle_white_without_boarder"
            android:contentDescription="@string/people"
            android:src="@drawable/people_icon"
            app:layout_constraintBaseline_toBaselineOf="@+id/imgMenuOption"
            app:layout_constraintEnd_toStartOf="@+id/imgScreenShare"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imgScreenShare"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:contentDescription="@string/screen_share"
            android:src="@drawable/screen_share_state"
            app:layout_constraintBaseline_toBaselineOf="@+id/imgRoster"
            app:layout_constraintEnd_toStartOf="@+id/imgMenuOption"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/imgRoster" />

        <ImageView
            android:id="@+id/imgMenuOption"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:contentDescription="@string/more_option"
            android:padding="8dp"
            android:background="@drawable/bg_circle_white_without_boarder"
            android:src="@drawable/ic_more_option"
            app:layout_constraintBaseline_toBaselineOf="@+id/imgClose"
            app:layout_constraintEnd_toStartOf="@+id/imgClose"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/imgScreenShare" />

        <ImageView
            android:id="@+id/imgClose"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:contentDescription="@string/end_meeting"
            android:src="@drawable/ic_leave_meeting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgMenuOption"
            app:layout_constraintTop_toTopOf="@+id/imgMenuOption"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/controller_flow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="imgRoster,imgScreenShare,imgMenuOption,imgClose"
            app:flow_horizontalGap="25dp"
            app:flow_horizontalStyle="packed"
            app:flow_wrapMode="chain"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/rosterContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
